--- a/latex/content/implementation.tex
+++ b/latex/content/implementation.tex
@@ -145,13 +145,13 @@ On commence par calculer $R_j$ pour chaque option.
 
 Le résultat final est $r_j$ qui est donné par la relation $R_j = r_j G$.
 Le calcul du résultat final est le calcul du logarithme discret sur $R_j$.
-C'est un problème difficile sur de grand nombre, cependant pour des nombres 
-relativement petits, une recherche par brute force est possible.
-Le temps de calcul est parfaitement raisonnable et fonctionnel, même pour de très grand groupe, 
-une analyse détaillée est fait dans la \aaref{sec:res:perf:resultat}.
+C'est un problème difficile sur de grands nombres, cependant pour des nombres 
+relativement petits, une recherche par force brute est possible.
+Le temps de calcul est parfaitement raisonnable et fonctionnel, même pour de très grands groupes, 
+une analyse détaillée est faite dans la \aaref{sec:res:perf:resultat}.
 
-Si le résultat est déjà connu et que seul la vérification est nécessaire, le calcul de $R_j$ est nécessaire, mais il n'y
-pas de brute force à faire, car il suffit de vérifié la relation $R_j = r_j G$.
+Si le résultat est déjà connu et que seule la vérification est nécessaire, le calcul de $R_j$ est nécessaire, mais il n'y
+pas de force brute à faire, car il suffit de vérifier la relation $R_j = r_j G$.
 
 Le temps de calcul du résultat est estimé dans la \aaref{sec:res:perf:resultat}.
 
