--- a/latex/content/cahier-des-charges.tex
+++ b/latex/content/cahier-des-charges.tex
@@ -5,30 +5,32 @@
 Création d'un logiciel mettant en place un système de vote électronique alternatif (p.ex.~basé sur la méthode Borda), en prenant en compte la cryptographie pour gérer la sécurité, la confidentialité et la non-répudiabilité du résultat.
 
 \subsection{Contexte}
-Actuellement la plupart des votes se font avec un système à la majorité (relative ou absolue) cependant d'autres systèmes existent pour essayer, soit de minimiser les mécontents (méthode Borda, vote par approbation, ...), soit de maximiser les contents (Jugement majoritaire, méthode de Condorcet, ...).
+Actuellement la plupart des votes se font avec un système à la majorité (relative ou absolue), cependant d'autres systèmes existent pour essayer soit de minimiser les mécontents (méthode Borda, vote par approbation, ...), soit de maximiser les contents (Jugement majoritaire, méthode de Condorcet, ...).
 
-De par l'utilisation quasi exclusive du vote majoritaire, les quelques applications ou sites web permettant de faire un choix de manière anonyme utilisent ce système.
+%TODO "De par" > "En conséquence de "
+%TODO ajouté "dans l'ensemble des votations de tous genres"
+De par l'utilisation quasi exclusive du vote majoritaire dans l'ensemble des votations de tous genres, les quelques applications ou sites web permettant de faire un choix de manière anonyme utilisent ce système.
 
 \section{Cahier des charges}
 \subsection{Objectif principal}\label{ssec:cdc:cdc:objprinc}
 \begin{enumerate}
-  \item Études des méthodes de vote alternatif, quel sont leurs avantages et leurs inconvénients.
+  \item Étude des méthodes de vote alternatif, quelS sont leurs avantages et leurs inconvénients.
   \item Identifier les propriétés cryptographiques nécessaires aux différentes méthodes de vote pour permettre la sécurité et la confidentialité du vote~:
     \begin{itemize}
-      \item Seules les personnes autorisées peuvent participer au vote (et qu'une seule fois)
-      \item Seul le votant connait son vote (même le serveur ne peut pas faire le lien votant $\longleftrightarrow$ vote)
-      \item Le votant n'a pas moyen de prouver ce qu'il a voté (évite la corruption)
-      \item Chacun peut vérifier que son vote a bien été pris en compte
+      \item seules les personnes autorisées peuvent participer au vote (et cela une seule fois)
+      \item seul le votant connait son vote (même le serveur ne peut pas faire le lien votant $\longleftrightarrow$ vote)
+      \item le votant n'a pas de moyen de prouver ce qu'il a voté (ce qui évite la corruption)
+      \item chacun peut vérifier que son vote a bien été pris en compte.
     \end{itemize}
-  \item Implémenter une démo de une ou plusieurs des méthodes de votations alternatif, don au moins une cherchant à minimiser les mécontents. Cette démo a pour objectif de montrer que le système de vote implémenté, puisse de manière électronique satisfaire les propriétés ci-dessus.
+  \item Implémenter une démo d'une ou plusieurs méthodes alternatives de votation, dont au moins une qui cherche à minimiser les mécontents. Cette démo a pour objectif de montrer que le système de vote implémenté, pourra de manière électronique satisfaire les propriétés ci-dessus.
 \end{enumerate}
 
 \subsection{Livrables}
     \begin{itemize}
-      \item Un système de vote (la partie cliente et la partie serveur) dont la partie crypto est implémenter en Rust
+      \item Un système de vote (la partie cliente et la partie serveur) dont la partie crypto est implémentée en Rust
       \item Un rapport contenant: 
       \begin{itemize}
-        \item L'analyse des différentes méthodes votes
+        \item L'analyse des différentes méthodes de vote
         \item Les choix effectués durant le projet
         \item Les spécifications du logiciel de vote
       \end{itemize}
