--- a/latex/content/introduction.tex
+++ b/latex/content/introduction.tex
@@ -4,12 +4,12 @@
 
   \section{Définition}
 
-  \paragraph{Vote électronique ou e-voting}
-  Vote effectuer grâce à des outils informatique.
-  Ce terme peut à la fois désigner un vote effectuer à distance via Internet ou un vote effectuer
+  \paragraph{Vote électronique ou e-voting:}
+  Vote effectué grâce à des outils informatique.
+  Ce terme peut à la fois désigner un vote effectué à distance via Internet ou un vote effectué
   dans un bureau de vote à l'aide d'une machine à voter.
   Dans ce document nous nous focalisons sur le vote électronique à distance.
-  Lorsque ce n'est pas préciser, nous parlons du vote électronique à distance et non pas dans un bureau de vote.
+  Lorsque ce n'est pas précisé, nous parlons du vote électronique à distance et non pas du vote effectué dans un bureau de vote.
 
   \paragraph{Comptage électronique}
   \todo{}
@@ -18,12 +18,11 @@
   \todo{}
 
   \paragraph{Élection ou votation}
-  Une élection est le fait qu'un groupe de personne (les électrices et électeurs) choisissent une (ou plusieurs) personne
-  pour les représenter ou pour toutes autres tâche.
-  Une votation est le fait qu'un groupe de personne (les votantes et votants) choisissent une (ou des) options.
-  Une élection est donc simplement une votations ou les options possibles sont des personnes.
-  Ce document ne précise pas à chaque fois que ce qui est dit pour l'un est également valable pour l'autre de 
-  manière générale.
+  Une élection est une action par laquelle un groupe de personne (les électrices et électeurs) choisissent une (ou plusieurs) personne
+  pour les représenter ou pour accomplir toute autre tâche.
+  Une votation est une action par laquelle un groupe de personne (les votantes et votants) choisissent une (ou des) options.
+  Une élection est donc simplement une votation dans laquelle les options possibles sont des personnes.
+  Sauf mention contraire, dans ce document ce qui est dit pour l'un l'est également pour l'autre.
 
   \paragraph{Vote utile}\aref{diff:comp:util:util}
   \todo{}
@@ -34,8 +33,8 @@
   
   \subsection{Appréciations}
   
-  À plusieurs endroit et dans divers contexte, des appréciations textuelles sont utilisé. 
-  Voici l'ordre dans lequel elles doivent être interprétée (de la meilleur à la plus mauvaise)~:
+  À plusieurs endroits et dans divers contextes, des appréciations textuelles sont utilisées. 
+  Voici l'ordre dans lequel elles doivent être interprétées (de la meilleure à la plus mauvaise)~:
   
   \begin{center}
   	\colorbox{green}{Excellent} $\succ$
@@ -46,7 +45,7 @@
   	\colorbox{red}{A rejeter}
   \end{center}
 
-  Par manque de place à certain endroit, ces abréviations sont utilisé~:
+  Par manque de place à certains endroits, ces abréviations sont utilisé~:
 
   \begin{center}
 	\colorbox{green}{Ex} $\succ$
@@ -58,38 +57,38 @@
   \end{center}
 
   Lorsque l'appréciation \colorbox{red}{A rejeter} est utilisée dans les intentions de vote d'une simulation, 
-  elle corresponds également au refus de vote pour ce candidat dans le cas ou le type de scrutin utilisé le permet.
+  elle correspond également au refus de vote pour ce candidat dans le cas ou le type de scrutin utilisé le permet.
   
   \subsection{Intention de vote}
   
-  Des simulations de scrutin on été réalisé, pour chaque scrutin les intentions de vote des électeurs sont afficher.
+  Des simulations de scrutin on été réalisées, et pour chaque scrutin les intentions de vote des électeurs sont affichées.
   Les tableaux \aref{fig:intro:notation:note-A} montrent les trois manières de représenter les intentions vote dans ce document.
   \begin{itemize}
-  	\item L'en-tête de la première colonne contient le nombre total de votant.
-  	\item Chaque ligne corresponds à plusieurs votants ayant exactement les mêmes intentions de vote.
+  	\item Le nombre total de votants est mentionné dans l'en-tête de la première colonne.
+  	\item Chaque ligne correspond à plusieurs votants ayant exactement les mêmes intentions de vote.
   	\item La première colonne contient 
   	\begin{itemize}
-  		\item le pourcentage de personne que représente cette ligne
-  		\item le nombre exacte de votant correspondant 
-  		\item l'identifiant de la ligne en chiffre romain minuscule
+  		\item le pourcentage de personnes que représente cette ligne
+  		\item le nombre exact de votants correspondant 
+  		\item l'identifiant de la ligne en chiffres romains en minuscules
   	\end{itemize}
-  	\item Les candidats/options sont représenter par des lettres latines majuscule
+  	\item Les candidats/options sont représentés par des lettres latines en majuscules
   	\item Les tableaux \ref{fig:intro:notation:note-A:votesn} et \ref{fig:intro:notation:note-A:votes} indiquent 
-  	  pour chaque candidat/option, l'appréciation qui leur est donnée
+  	  pour chaque candidat/option, l'appréciation qui leur est donnée.
   	\item Les tableaux \ref{fig:intro:notation:note-A:votesc} et \ref{fig:intro:notation:note-A:votes} indiquent 
-  	  l'ordre des candidats pour lesquels les votants on accepter de voté.
-  	\item Les votants \ref{fig:intro:notation:note-A}.i et \ref{fig:intro:notation:note-A}.ii ont refuser de classer certain candidat 
+  	  l'ordre des candidats pour lesquels les votants ont accepté de voter.
+  	\item Les votants \ref{fig:intro:notation:note-A}.i et \ref{fig:intro:notation:note-A}.ii ont refusé de classer certains candidats 
   	  (respectivement D et (C et D)).
-  	\item Les votants \ref{fig:intro:notation:note-A}.iii ont effectué un vote complet en classant l'ensemble des candidats
+  	\item Les votants \ref{fig:intro:notation:note-A}.iii ont effectué un vote complet en classant l'ensemble des candidats.
   \end{itemize}
   
   
   
   \begin{nota}{Intention de vote et non vote réel}
-  	Pour la plupart des scrutins étudier, les intentions de vote décrit dans le tableaux corresponds à ce que est réelement pris en
-  	compte pour le calcul du ou de la vainqueure.
+  	Pour la plupart des scrutins étudiées, les intentions de vote décrites dans le tableau correspondent à ce qui est réelement pris en
+  	compte pour le calcul du vainqueur ou de la vainqueure.
   	
-  	Dans le cas de scrutin à plusieurs tours avec élimination les tableaux intermédiaire ne sont pas afficher mais corresponds au même 
+  	Dans le cas de scrutin à plusieurs tours avec éliminations les tableaux intermédiaires ne sont pas affichés mais correspondent aux mêmes 
   	classement et notation mais en retirant une ou plusieurs des options.
   \end{nota}
   
@@ -125,70 +124,70 @@
   \end{table}
   
   
-  \todo{Est-ce le cas ?? Certain exemple dans ce document sont issu de cas réel, ceci uniquement affin de montrer la plausibilité d'un tel cas, bien sûr le fonctionnement est identique en cas d'inversion des bords politiques des candidats/options dans les exemples}
+  \todo{Est-ce le cas ?? Certains exemples dans ce document sont issus de cas réels, ceci uniquement affin de montrer la plausibilité de tels cas. Bien sûr le fonctionnement est identique en cas d'inversion des bords politiques des candidats/options dans les exemples.}
   
   \subsection{Estimation}\label{sec:intro:notation:estimation}
   
-  Dans la section résultat certain résultat ont été estimée, d'autre calculée ou mesurée.
-  Si une valeur est issue d'une estimation ou d'un calcul approximatif il est précéder du symbole \textasciitilde.
-  Dans les cas d'un calcul exact (exemple nombre de bytes) la valeur n'est pas préfixée, même s'il n'a pas ou pas put être mesuré.
-  Dans le cas d'une mesure (d'une durée par exemple) d'un algorithme ayant effectivement été lancer pendant cette durée, la valeur est présentée tel quel.
+  Dans la section résultats, certains résultat ont été estimés, d'autres calculés ou mesurés.
+  Si une valeur est issue d'une estimation ou d'un calcul approximatif il est précédé du symbole \textasciitilde.
+  Dans les cas d'un calcul exact (exemple nombre de bytes) la valeur n'est pas préfixée, même s'il n'a pas été mesuré.
+  Dans le cas d'une mesure (d'une durée par exemple) d'un algorithme ayant effectivement été lancé pendant cette durée, la valeur est présentée telle quelle.
 
   \section{Type de scrutin}
-  Lors qu'on vit en groupe, on a régulièrement besoin de prendre des décisions.
-  Les deux techniques les plus utiliser sont laisser un petit groupe choisir pour les autres ou 
+  Lorsqu'on vit en groupe, on a régulièrement besoin de prendre des décisions.
+  Les deux techniques les plus utilisées sont laisser un petit groupe choisir pour les autres, ou 
   interroger les membres du groupe pour connaître leur position.
   Pour connaître la position des membres d'un groupe, on organise un scrutin avec une méthode pour décompter
   les voix.
-  Cependant lorsqu'il faut choisir un petit groupe qui aura le pouvoir, les possibilités pour le désigné son 
-  plus nombreuse.
+  Cependant lorsqu'il faut choisir un petit groupe qui aura le pouvoir, les possibilités pour le désigner sont
+  plus nombreuses.
   \begin{description}
-  	\item[Héritage] Dans un certain nombre de lieu, le pouvoir s'hérite au sein de la famille (ou désigné par le prédécesseur).
-  	Il va de soit que ce n'est pas une procédure démocratique et qu'elle ne seras pas envisagée dans ce document.
-  	\item[Tirage au sort] On peut tirer au sort les représentants au sein de tous le groupe. 
-  	Même si cette technique a de bonne propriété, elle est à la fois simple à comprendre et à analyser, mais également 
-  	incompatible avec une prise de décision direct (dans le cadre d'une démocratie directe).\footnote{Malgré certaine idée reçue, le tirage au sort est belle et bien utilisé, même par l'état français (pour les conventions citoyenne).}
-  	\item[Élection] On peut organisé un scrutin pour connaître la position de la population sur qui serait le/la plus 
-  	à même de les représenter. 
-  	Dans ce cas c'est une votation ou les options possibles ne sont pas des propositions concrète, mais une liste de personne.
+  	\item[Héritage] Dans un certain nombre de lieux, le pouvoir se transmet par héritage, ou le successeur est désigné par le prédécesseur.
+  	Il va de soit que ce n'est pas une procédure démocratique et qu'elle ne sera pas envisagée dans ce document.
+  	\item[Tirage au sort] On peut tirer au sort les représentants au sein de tout le groupe. 
+  	Même si cette technique a de bonne propriétés, elle est à la fois simple à comprendre et à analyser. Elle reste en revanche également
+  	incompatible avec une prise de décision direct (dans le cadre d'une démocratie directe) et ne concerne donc pas le présent travail.\footnote{Malgré certaines idées reçues, le tirage au sort est bel et bien utilisé, même par l'état français (pour les conventions citoyennes).}
+  	\item[Élection] On peut organiser un scrutin pour connaître la position de la population sur qui serait le/la plus 
+  	à même de la représenter. 
+  	Dans ce cas c'est une votation ou les options possibles ne sont pas des propositions concrètes mais une liste de personnes.
   	À l'exception du cas trivial, où tout le monde est d'accord, il faut également se mettre d'accord sur la manière
-  	de décompter les points attribué à chaque candidat·es.
+  	de décompter les points attribués à chaque candidat·es.
   \end{description}
   
-  Dans ce document, seul les scrutins permettant à la fois d'élire et de prendre une décision en direct sont étudier.
-  Dans ce cadre, certain exemple parle de candidat alors que d'autre parle d'option, ces termes sont donc quasiment 
-  interchangeable pour l'analyse de fonctionnement des scrutins.
+  Dans ce document, seuls les scrutins permettant à la fois d'élire et de prendre une décision en direct sont étudilés.
+  Dans ce cadre, certains exemples parlent de candidats alors que d'autre parlent d'options, ces termes sont donc quasiment 
+  interchangeables pour l'analyse de fonctionnement des scrutins.
   
   \subsection[Referendum, cas particulier]{Referendum, cas particulier du cas général d'une élection}
   
-  Le referendum tel que pratiqué en Suisse et d'autre pays, simplement un cas particulier d'une votation/élection. 
-  C'est une votations ou les choix possible/candidat sont remplacer par 2 options, \emph{pour} ou \emph{contre} la décision
+  Le referendum tel que pratiqué en Suisse et dans d'autre pays, est simplement un cas particulier d'une votation/élection. 
+  C'est une votation dans laquelle les choix possible/candidat sont remplacés par 2 options: \emph{pour} ou \emph{contre} la décision
   du gouvernement.
-  Si le scrutin utiliser le permet, une liste de possibilité plus complète peut être laisser à la population, notamment 
+  Si le scrutin utilisé le permet, une liste de possibilités plus complète peut être proposée à la population, notamment 
   toutes les positions intermédiaires viables. 
   
-  Les initiatives populaires en Suisse en sont un exemple, il y a 3 choix qui est donné à la population : 
+  Les initiatives populaires en Suisse en sont un exemple, 3 possibilités sont proposées à la population : 
   \begin{enumerate}
-  	\item refusé le changement
+  	\item refuser tout changement
   	\item la modification proposée par le texte de l'initiative populaire
   	\item la modification proposée par le contre-projet du parlement
   \end{enumerate}
   
   Le scrutin qui a été choisi par la Suisse est une votation à la majorité absolue (> 50\%) à 2 candidats/options.
-  Ce choix de scrutin a fait qu'il y a donc 3 questions posées et un choix final pas forcement intuitif pour tous.
-  Des scrutins mieux adapté à ce genre de situation sont abordé plus loin dans ce document.
+  Ce choix de scrutin fait qu'il y a donc 3 questions posées et un choix final pas forcement intuitif pour tous.
+  Des scrutins mieux adaptés à ce genre de situation sont abordés plus loin dans ce document.
   
   \todo{Lien vers meilleures scrutin pour 3 options}
   
   \section[Le non-vote dans les simulations]{Le non-vote (blanc, nul et abstention) dans les simulations}
   
-  Des simulations ont été effectuée, cependant pour permettre une analyse plus simple et pertinente, il a été choisi de ne 
-  pas prendre en compte les votes qui ne sont pas décompter normalement.
-  Les votes blancs, nuls et les abstentions ne sont donc pas simuler, cependant lorsque le protocole de vote prévoyait de 
-  classer les candidats, la possibilité a été laisser de ne pas classer certain des candidats.
+  Des simulations ont été effectuées. Cependant pour permettre une analyse plus simple et pertinente, il a été choisi de ne 
+  pas prendre en compte les votes qui ne sont pas décomptés normalement.
+  Les votes blancs, nuls et les abstentions ne sont donc pas simulés. Cependant lorsque le protocole de vote prévoit de 
+  classer les candidats, la possibilité a été laissée de ne pas classer certain des candidats.
   
-  Dans le cas d'une utilisation réel d'un scrutin, la question de comment décompter les votes blancs, nuls et les abstentions 
-  doit être réfléchie et ne pas donnée d'avantage à un camp plutôt qu'à l'autre.
+  Dans le cas d'une utilisation réele d'un scrutin, la question de la manière de décompter les votes blancs ou nuls et les abstentions 
+  doit faire l'objet d'une réflexion et ne pas donner d'avantage à un camp plutôt qu'à l'autre.
   
 \end{document}
 
